--- a/src/ui/overlay/window/Dialog.js.css
+++ b/src/ui/overlay/window/Dialog.js.css
@@ -3,28 +3,32 @@
     z-index: 900900;
     pointer-events: all;
 }
+
 #footer,
 #submit,
 #cancel {
     display: flex;
 }
+
 #text {
     display: block;
-    margin: 8px 0px;
+    margin-bottom: 8px;
+    line-height: 1.3em;
     word-wrap: break-word;
     white-space: pre-wrap;
     resize: none;
 }
+
 #footer {
-    height: 50px;
-    margin-top: 20px;
-    padding: 10px 30px 10px;
+    align-items: center;
     justify-content: flex-end;
+    min-height: 50px;
     color: var(--modal-footer-text-color, #000000);
     background-color: var(--modal-footer-back-color, #e4e4e4);
     background-image: var(--modal-footer-back-image, none);
     border-top: solid var(--modal-border-width, 2px) var(--modal-border-color, #cccccc);
 }
+
 #submit,
 #cancel {
     align-items: center;
@@ -43,14 +47,19 @@
     user-select: none;
     appearance: none;
 }
+
 #submit:hover,
 #cancel:hover {
     color: var(--button-hover-text-color, #ffffff);
     background-color: var(--button-hover-back-color, #353935);
     border-color: var(--button-hover-border-color, #222222);
 }
+
 #window {
-    width: auto;
-    min-width: 20vw;
-    max-width: 500px;
+    max-width: min(600px, calc(100vw - 50px));
+    min-height: min(100px, calc(100vh - 50px));
+}
+
+#body {
+    padding: 10px;
 }
